# vision-en-robotica-2012

./: AVI_to_MP4.md  ProjectHome.md  Video_to_images.md  limpiar_todo.m
resumenes/: resumen_formulas.tex
tp1/: calcular_P_imagen_infinito.m  ej2.m  ej3.m  leer_puntos_de_imagen.m  rectificar_imagen.m  tp1.m
tp2/: DLT.m  DLT_puro.m  RANSAC.m  ej2.m  ej3.m  showresults.m  surf_x86_64  tp2.m
tp3/: Makefile  compute_disparity.cpp  read_values.cpp
tp3/derecha/: Image0.tif  Image1.tif  Image12.tif  Image13.tif  Image14.tif  Image17.tif  Image18.tif  Image19.tif  Image2.tif  Image4.tif  Image7.tif  Image8.tif  Image9.tif
tp3/izquierda/: Image10.tif  Image11.tif  Image13.tif  Image15.tif  Image16.tif  Image17.tif  Image2.tif  Image5.tif  Image6.tif  Image7.tif  Image9.tif
tp_final/: Makefile  RectifyMaps.h  compute_disparity.cpp  obstacle_avoidance.cpp  parameters.xml
tp_final/calibrate_mapping/: calibrate_mapping.cpp
tp_final/informe/: biblio.bib  informe.tex
tp_final/libcam/: libcam.h  main.cpp
tp_final/libexabot-remote/: CMakeLists.txt
tp_final/slides/: presentacion.tex
tp_final/videos/: cam1.mpg  cam2.mpg  out.mpg
trunk/: ej3.m  getMouseXY.m  limpiar_todo.m  obtener_recta.m  tp1.m
trunk/resumenes/: resumen_formulas.tex
trunk/tp1/: ej1.m  mostrar_imagen.m  obtener_recta.m  rectificar_imagen.m  tp1.m
trunk/tp2/: DLT.m  Makefile  surf.cpp  surf_x86_32  surfmatch.m  surfread.m  tp2.m
trunk/tp3/: Makefile  read_values.cpp
trunk/tp_final/: Makefile  compute_disparity.cpp  (+1 more)
wiki/: AVI_a_MP4.wiki  AVI_to_MP4.wiki  Video_to_images.wiki
(+51 files in other folders)
